--- a/template.yml
+++ b/template.yml
@@ -1,17 +1,16 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Resources:
   SpotifyLambdaStack:
-    Type: 'AWS::CloudFormation::Stack'
+    Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: './lambda-spotify-api/lambda-template.yml'
+      TemplateURL: "./lambda-spotify-api/lambda-template.yml"
       Parameters:
-        Environment: 'dev'
+        Environment: "dev"
 
   SpotifyApigatewayStack:
-    Type: 'AWS::CloudFormation::Stack'
+    Type: "AWS::CloudFormation::Stack"
     Properties:
-      TemplateURL: './api-gateway/api-gateway-template.yml'
+      TemplateURL: "./api-gateway/api-gateway-template.yml"
       Parameters:
-        Environment: 'dev'
-        SpotifyApiLambda: !GetAtt [SpotifyLambdaStack,Outputs.SpotifyApiFunction]
-    DependsOn: SpotifyLambdaStack
+        Environment: "dev"
+        SpotifyApiLambda: !GetAtt SpotifyLambdaStack.Outputs.SpotifyApiFunction
