--- a/samconfig.toml
+++ b/samconfig.toml
@@ -13,9 +13,14 @@ parallel = true
 lint = true
 
 [default.deploy.parameters]
-capabilities = "CAPABILITY_IAM"
+capabilities = "CAPABILITY_AUTO_EXPAND CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
+stack_name = "spotify-api-integration"
+s3_prefix = "spotify-api-integration"
+region = "us-west-2"
+image_repositories = []
+disable_rollback = false
 
 [default.package.parameters]
 resolve_s3 = true
