--- a/api-gateway/api-definition.yaml
+++ b/api-gateway/api-definition.yaml
@@ -1,6 +1,6 @@
 openapi: "3.0.1"
 info:
-  title: "spotify-integration-api"
+  title: "Spotify api integration"
   version: "1.0"
 
 paths:
@@ -8,15 +8,35 @@ paths:
     get:
       summary: healthcheck endpoint
       operationId: getHealthcheck
-      responses:
-        200:
-          description: Succesful operation
+      responses: 
+        "200":
+          description: "200 response"
           headers:
-            Access-Control-Allow-Origin: "'*'"
-          content:
-            application/json:
+            Access-Control-Allow-Origin:
               schema:
-                $ref: "#/components/schemas/Healthcheck"
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+          content: {}
+
+      x-amazon-apigateway-integration:
+        type: "mock"
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'*'"
+              method.response.header.Access-Control-Allow-Headers: "'*'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json: "{\n  \"statusCode\" : 200\n}\n" 
+        passthroughBehavior: "when_no_match"
+      
+      
   /track:
     get:
       x-amazon-apigateway-integration:
@@ -28,7 +48,7 @@ paths:
       summary: Get the information of a specific track
       operationId: getTrack
       responses:
-        200:
+        "200":
           description: Succesful operation
           headers:
             Access-Control-Allow-Origin: "*"
