--- a/lambda-spotify-api/package.json
+++ b/lambda-spotify-api/package.json
@@ -13,12 +13,14 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.14.14"
   },
   "devDependencies": {
+    "@jest/globals": "^29.2.0",
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^29.2.0",
-    "@jest/globals": "^29.2.0",
     "@types/node": "^18.11.4",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
