--- a/lambda-spotify-api/package.json
+++ b/lambda-spotify-api/package.json
@@ -13,6 +13,7 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "dotenv": "^16.4.7",
     "esbuild": "^0.14.14"
